crates/ruma-common/tests/it/identifiers/ui/03-invalid-new-id-macros.rs
fn main() {
    let _ = ruma_common::session_id!("invalid~");
}
